tests/should_pass/test_tuples.skj
fn test_integer_tuple(a: i64) -> (i32, i64, u32, u64, bool) {
    let x: (i32, i64, u32, u64, bool) = (1, a, 3, 4, true);
    let y: bool = x[4];
    return x;
}


fn main() -> u32 {
    return 1;
}
