tests/should_fail/test_ill_typed_array.skj
fn main() {
    let bad_array: i32[] = [true, false];
}
